--- a/index.html
+++ b/index.html
@@ -19,44 +19,81 @@
                 <div class="header-row_intro"><img class="intro-photo" src="./assets/imgs/main_photo.jpeg" alt="Alena Tsishchanka">
                     <h1>Alena Tsishchanka</h1>
                 </div>
-                <div class="about-wrapper">
+                <div class="title-wrapper">
                     <div class="section-info">
                         <div class="section-icon"><img class="section-icon_img" src="./assets/imgs/user.png" alt="About me"></div>
                         <div class="section-title">
                             <h2>ABOUT ME</h2>
                         </div>
                     </div>
-                    <div class="about-box">
-                        <ul class="about_list">
-                            <li class="about-item">
+                    <div class="section-info-box">
+                        <ul>
+                            <li>
                                 Good team player, experience in working in team.
                             </li>
-                            <li class="about-item">
+                            <li>
                                 Understanding of all stages of software development process.
                             </li>
-                            <li class="about-item">
+                            <li>
                                 Self-motivated and personally accountable.
                             </li>
-                            <li class="about-item">
+                            <li>
                                 Good communication skills.
                             </li>
-                            <li class="about-item">
+                            <li>
                                 Experience in React, JavaScript, HTML, CSS, Git.
                             </li>
-                            <li class="about-item">
+                            <li>
                                 Quick learning, responsible, self-motivated.
                             </li>
                         </ul>
                     </div>
                 </div>
             </div>
-            <div>
-                <p>LEFT</p>
+            <div class="containers-wrapper">
+                <div class="container-left">
+                    <div class="left-section-info">
+                        <div class="left-section-title">
+                            <h2>CONTACTS</h2>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="container-right">
+                    <div class="title-wrapper">
+                        <div class="section-info">
+                            <div class="section-icon"><img class="section-icon_img" src="./assets/imgs/skills.png" alt="About me"></div>
+                            <div class="section-title">
+                                <h2>Technical Skills</h2>
+                            </div>
+                        </div>
+                        <div class="section-info-box">
+                            <ul>
+                                <li>
+                                    Good team player, experience in working in team.
+                                </li>
+                                <li>
+                                    Understanding of all stages of software development process.
+                                </li>
+                                <li>
+                                    Self-motivated and personally accountable.
+                                </li>
+                                <li>
+                                    Good communication skills.
+                                </li>
+                                <li>
+                                    Experience in React, JavaScript, HTML, CSS, Git.
+                                </li>
+                                <li>
+                                    Quick learning, responsible, self-motivated.
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+
+                </div>
             </div>
-            <div>
-                <p>RIGHT</p>
-            </div>
-        </div>
 
     </header>
 
