feat: add main, footer

--- a/index.html
+++ b/index.html
@@ -50,54 +50,212 @@
                     </div>
                 </div>
             </div>
-            <div class="containers-wrapper">
-                <div class="container-left">
-                    <div class="left-section-info">
-                        <div class="left-section-title">
-                            <h2>CONTACTS</h2>
-                        </div>
-                    </div>
+    </header>
+
+    <main class="containers-wrapper">
+        <div class="container-left">
+            <div class="left-section-info">
+                <div class="left-section-title">
+                    <h2>CONTACTS</h2>
                 </div>
-
-
-                <div class="container-right">
-                    <div class="title-wrapper">
-                        <div class="section-info">
-                            <div class="section-icon"><img class="section-icon_img" src="./assets/imgs/skills.png" alt="About me"></div>
-                            <div class="section-title">
-                                <h2>Technical Skills</h2>
+                <div>
+                    <ul class="section-list">
+                        <li class="contact-item">
+                            <div class="contact-icon"><img class="contact-icon_img" src="./assets/imgs/tg.png" alt="Telegram"></div>
+                            <div class="contact-title">alena_tsish</div>
+                        </li>
+                        <li class="contact-item">
+                            <div class="contact-icon"><img class="contact-icon_img" src="./assets/imgs/email.png" alt="E-mail"></div>
+                            <div class="contact-title">e.tsish@gmail.com</div>
+                        </li>
+                        <li class="contact-item">
+                            <div class="contact-icon"><img class="contact-icon_img" src="./assets/imgs/ln.png" alt="LinkedIn"></div>
+                            <div class="contact-title">
+                                <a href="https://www.linkedin.com/in/alena-tsishchanka-15936b178/" target="_blank">LinkedIn</a>
                             </div>
-                        </div>
-                        <div class="section-info-box">
-                            <ul>
-                                <li>
-                                    Good team player, experience in working in team.
-                                </li>
-                                <li>
-                                    Understanding of all stages of software development process.
-                                </li>
-                                <li>
-                                    Self-motivated and personally accountable.
-                                </li>
-                                <li>
-                                    Good communication skills.
-                                </li>
-                                <li>
-                                    Experience in React, JavaScript, HTML, CSS, Git.
-                                </li>
-                                <li>
-                                    Quick learning, responsible, self-motivated.
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
+                        </li>
+                        <li class="contact-item">
+                            <div class="contact-icon"><img class="contact-icon_img" src="./assets/imgs/git.png" alt="GitHub"></div>
+                            <div class="contact-title"><a href="https://github.com/tsishchanka" target="_blank">GitHub</a></div>
+                        </li>
 
+                    </ul>
+                </div>
+            </div>
+            <div class="left-section-info">
+                <div class="left-section-title">
+                    <h2>Languages</h2>
+                </div>
+            </div>
+            <div>
+                <ul class="section-list">
+                    <li>English: B1</li>
+                    <li>Russian</li>
+                    <li>Belarusian</li>
+                </ul>
+            </div>
+
+            <div class="left-section-info">
+                <div class="left-section-title">
+                    <h2>EDUCATION</h2>
+                </div>
+            </div>
+            <div>
+                <ul class="section-list">
+                    <li>
+                        <h3>Francisk Skorina Gomel State University</h3>
+                        <p>Bachelor's degree, Economic, 2011</p>
+                    </li>
+                </ul>
+            </div>
+            <div class="left-section-info">
+                <div class="left-section-title">
+                    <h2>Courses</h2>
+                </div>
+            </div>
+            <div>
+                <ul class="section-list">
+                    <h3>IT-SHATLE</h3>
+                    <p>HTML/CSS, JavaScript, ReactJS, Redux, 2021</p>
+                    </li>
+                    <li>
+                        <h3>Rolling Scopes School</h3>
+                        <p>HTML/CSS, JavaScript, 2022</p>
+                    </li>
+                </ul>
+            </div>
+            <div class="left-section-info">
+                <div class="left-section-title">
+                    <h2>LOCATION</h2>
+                </div>
+                <div>
+                    <ul class="section-list">
+                        <li class="contact-item">
+                            <div class="contact-icon"><img class="contact-icon_img" src="./assets/imgs/location.png" alt="Telegram"></div>
+                            <div class="contact-title">Minsk, Belarus</div>
+                        </li>
+                    </ul>
                 </div>
             </div>
 
-    </header>
+        </div>
 
 
+        <div class="container-right">
+            <div class="section-wrapper">
+                <div class="section-info">
+                    <div class="section-icon"><img class="section-icon_img" src="./assets/imgs/skills.png" alt="About me"></div>
+                    <div class="section-title">
+                        <h2>TECHNICAL SKILLS</h2>
+                    </div>
+                </div>
+                <div class="section-info-box">
+                    <ul>
+                        <li>
+                            Programming Languages: JavaScript.
+                        </li>
+                        <li>
+                            Web Technologies: HTML, CSS , ReactJS, Redux, Bootstrap, Material UI, Ant Design, TinyMCE, Git.
+                        </li>
+                        <li>
+                            Databases: PostgreSQL.
+                        </li>
+                        <li>
+                            Operating Systems: Windows, Linux.
+                        </li>
+                        <li>
+                            Other Skills: GitHub, GitLab, GitBash, Postman, WebStorm, MS Visual Studio, REST API, ES6, NPM, Jira, PrestaShop, MS Office.
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="section-wrapper">
+                <div class="section-info">
+                    <div class="section-icon"><img class="section-icon_img" src="./assets/imgs/work.png" alt="About me"></div>
+                    <div class="section-title">
+                        <h2>WORK EXPERIENCE</h2>
+                    </div>
+                </div>
+                <div class="section-info-box">
+                    <h3>Forgex project</h3>
+                    <p>November 2021 - December 2021 - JavaScript Intern, CeladonSoft, Minsk, Belarus</p>
+                    <p>Forgex is a learning tool that uses flashcards to aid the study of courses and/or any subject. It allows users to track their progress, create decks and courses and share these with other users. Users can share their expertise and
+                        start earning passively with Forgex. Professionals in their field can create masterclasses from which a fixed percentage is paid to them in royalties for every course sold.
+                    </p>
+                    <div>
+                        <h4>Responsibilities:</h4>
+                        <ul>
+                            <li>
+                                Frontend components developing.
+                            </li>
+                            <li>
+                                Searching and fixing bugs
+                            </li>
+                            <li>
+                                Frontend web development using React, Redux and JavaScript.
+                            </li>
+                            <li>
+                                Styling the app using SCSS, Material UI, Ant Design, TinyMCE.
+                            </li>
+                            <li>
+                                Optimization an application architecture using Redux.
+                            </li>
+                            <li>
+                                Using REST API to get/parse data.
+                            </li>
+                            <li>
+                                Work in team (project manager, QA, team leader, UI/UX designer).
+                            </li>
+                        </ul>
+                    </div>
+                    <h4>Environment:</h4>
+                    <p>WebStorm, React, Redux, JavaScript, SCSS, Material UI, Ant Design, TinyMCE, Git, GitLab, Jira.</p>
+                </div>
+
+                <div class="section-info-box">
+                    <h3>Website maintenance on PrestaShop CMS</h3>
+                    <p>November 2015 - April 2018 - Administrator, dves.by, Gomel, Belarus</p>
+                    <p>Maintenance and supporting an online-store of building materials for several years. Website administration work involves developing in PrestaShop CMS such as installing, working with themes, plugins, widgets and custom code, changing
+                        the look of the site, managing product cards and categories, and much more.
+                    </p>
+                    <h4>Responsibilities:</h4>
+                    <div>
+                        <ul>
+                            <li>
+                                Application design.
+                            </li>
+                            <li>
+                                Site administration.
+                            </li>
+                            <li>
+                                Content Management.
+                            </li>
+                            <li>
+                                Frontend development using HTML5, CSS3, JavaScript, PrestaShop modules.
+                            </li>
+                        </ul>
+                    </div>
+
+                    <h4>Environment:</h4>
+                    <p>WebStorm, PrestaShop, JavaScript, HTML5, CSS3.</p>
+                </div>
+            </div>
+
+        </div>
+    </main>
+    <footer>
+        <div>
+            <p>2022</p>
+        </div>
+        <div class="footer-git-box">
+            <div><img src="./assets/imgs/git.png" alt="GitHub"></div>
+            <div><a href="https://github.com/tsishchanka" target="_blank">GitHub</a></div>
+        </div>
+
+        <div class="footer-rs-icon">
+            <a href="https://rs.school/js/" target="_blank"><img src="./assets/imgs/rs_school_js.svg" alt="RSschool"></a>
+        </div>
+    </footer>
 </body>
 
 </html>
