fix: left section layout

--- a/index.html
+++ b/index.html
@@ -62,11 +62,15 @@
                     <ul class="section-list">
                         <li class="contact-item">
                             <div class="contact-icon"><img class="contact-icon_img" src="./assets/imgs/tg.png" alt="Telegram"></div>
-                            <div class="contact-title">alena_tsish</div>
+                            <div class="contact-title">
+                                <span>alena_tsish</span>
+                            </div>
                         </li>
                         <li class="contact-item">
                             <div class="contact-icon"><img class="contact-icon_img" src="./assets/imgs/email.png" alt="E-mail"></div>
-                            <div class="contact-title">e.tsish@gmail.com</div>
+                            <div class="contact-title">
+                                <span>e.tsish@gmail.com</span>
+                            </div>
                         </li>
                         <li class="contact-item">
                             <div class="contact-icon"><img class="contact-icon_img" src="./assets/imgs/ln.png" alt="LinkedIn"></div>
